# duneana

./: CMakeLists.txt
duneana/: CMakeLists.txt
duneana/AnaTree/: AnalysisTree.fcl  AnalysisTree_module.cc  CMakeLists.txt
duneana/CAFMaker/: CAFMaker.fcl  CAFMaker_legacy_module.cc  CAFMaker_module.cc  CMakeLists.txt
duneana/CalibAna/: CMakeLists.txt  CalibAnaTree.h  CalibAnaTreeObj.h  CalibAnaTreeSelectAllTracks_tool.cc  CalibAnaTreeSelectAnode2CathodeTrack_tool.cc  CalibAnaTreeSelectStoppingTrack_tool.cc  CalibAnaTree_module.cc  G4processUtil.h  ICATSelectionTool.h  classes.h  classes_def.xml
duneana/CalibAna/fcl/: dune_calibanatree.fcl  run_calibanatree_alltracks.fcl  run_calibanatree_hd.fcl
duneana/DAQSimAna/: CMakeLists.txt  nonoise_nozs_detsim_supernova_1x2x6.fcl
duneana/DAQSimAna/AbsRunningSumHitFinder/: CMakeLists.txt
duneana/DAQSimAna/CalibrationTree/: CMakeLists.txt
duneana/DAQSimAna/DataHit/: CMakeLists.txt
duneana/DAQSimAna/PackedDump/: CMakeLists.txt
duneana/DAQSimAna/RunningSumHitFinder/: CMakeLists.txt
duneana/DAQSimAna/SNAnaClustering/: CMakeLists.txt  SNAna.fcl  SNAna2.fcl  SNAna2_module.cc  SNAnaUpdate_module.cc  SNAna_module.cc  SNAna_update.fcl  addnoise_findprim_daqsimanas_refactored.fcl  addnoise_findprim_daqsimanas_refactored_12.fcl  addnoise_findprim_daqsimanas_refactored_STATIC.fcl  addnoise_findprim_snanas.fcl  addnoise_findprim_snanas2.fcl  addnoise_findprim_snanas_highthreshold.fcl  addnoise_findprim_snanas_update.fcl  addnoise_findprim_snanas_wirecell.fcl  addnonoise_findprim_daqsimanas_refactored.fcl  snana2_job.fcl  trigprim.fcl  trigprim_wirecell.fcl
duneana/DAQSimAna/SNAnaClustering/fcl/: addnoise_findprim_daqsimanas_refactored.fcl  addnoise_findprim_snanas2.fcl
duneana/DAQSimAna/TriggerPrimitiveFinder/: CMakeLists.txt  TriggerPrimitiveFinderPass1.h  TriggerPrimitiveFinderPass1_tool.cc  TriggerPrimitiveFinderPass2_tool.cc  TriggerPrimitiveFinderTemplate_tool.cc  TriggerPrimitiveFinder_module.cc
duneana/DAQSimAna/WaveformDump/: CMakeLists.txt
duneana/DAQSimAna/fcl/: CMakeLists.txt
duneana/EnergyStudies/: CMakeLists.txt
duneana/EventDisplay3D/: CMakeLists.txt
duneana/EventFilters/: CMakeLists.txt
duneana/GenRecoValidator/: CMakeLists.txt  GenRecoValidator.fcl  GenRecoValidator_module.cc
duneana/HitAnalysis/: CMakeLists.txt
duneana/LowEAna/: CMakeLists.txt  LowEAna_module.cc
duneana/LowEAna/fcl/: LowEAna.fcl  lowe_ana_dune10kt_1x2x6.fcl  lowe_ana_dune10kt_1x2x6_legacy.fcl
duneana/PandoraAnalysis/: CMakeLists.txt
duneana/ProductFilters/: CMakeLists.txt
duneana/RawDigitAna/: CMakeLists.txt  RawDigitAna_module.cc  rawdigit_ana_dune10kt_1x2x6.fcl  rawdigit_ana_dunevd10kt_1x8x14_3view_30deg.fcl  rawdigit_ana_protodune.fcl
duneana/ShowerAna/: CMakeLists.txt
duneana/SolarNuAna/: AdjHitsUtils.cc  AdjHitsUtils.h  AdjOpHitsUtils.cc  AdjOpHitsUtils.h  CMakeLists.txt  SolarAuxUtils.cc  SolarAuxUtils.h  SolarNuAna_module.cc
duneana/SolarNuAna/fcl/: SolarNuAna.fcl  generator_labels.fcl  solar_ana_dune10kt_1x2x6.fcl  solar_ana_dune10kt_1x2x6_legacy.fcl  solar_ana_dune10kt_1x2x6_mcc11.fcl  solar_ana_dunevd10kt_1x8x14_3view_30deg.fcl  solar_ana_dunevd10kt_1x8x6_3view_30deg.fcl  solar_ana_flash_radiological_decay0_dune10kt_1x2x6.fcl  solar_ana_marley_dune10kt_1x2x6.fcl  solar_ana_radiological_decay0_dune10kt_1x2x6.fcl  solar_ana_radiological_decay0_dunevd10kt_1x8x14_3view_30deg.fcl
duneana/SupernovaAna/: CMakeLists.txt  SupernovaAna2.fcl  SupernovaAna2_module.cc  supernovaana2_genonly.fcl  supernovaana2_job.fcl  supernovaana2_notgen.fcl  supernovaana_job2.fcl
duneana/TrackingAna/: CMakeLists.txt
duneana/WireAna/: CMakeLists.txt  WireAnaTree.fcl  WireAnaTree_module.cc  wire_ana_dune10kt_1x2x6.fcl  wire_ana_dunevd10kt_1x8x14_3view_30deg.fcl  wire_ana_protodune.fcl
duneana/WireClusterAnalysis/: CMakeLists.txt
ups/: product_deps
