add_subdirectory(fcl)
#art_dictionary()
art_make(BASENAME_ONLY
         TOOL_LIBRARIES
         canvas
	 lardataalg::DetectorInfo
         lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
         larcore::Geometry_Geometry_service
	 MODULE_LIBRARIES
         lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
	 lardataalg::DetectorInfo
	 dunecore::DAQTriggerSim_TriggerDataProducts
         larcorealg::Geometry
	 larcore::Geometry_Geometry_service
         lardataobj::RawData
         nusimdata::SimulationBase
         larsim::MCCheater_BackTrackerService_service
         larsim::MCCheater_PhotonBackTrackerService_service
         larsim::MCCheater_ParticleInventoryService_service
         nug4::ParticleNavigation
         ART_FRAMEWORK_CORE
         ART_FRAMEWORK_PRINCIPAL
         ART_FRAMEWORK_SERVICES_REGISTRY
         ART_ROOT_IO_TFILE_SUPPORT
         ROOT::Core
         ART_ROOT_IO_TFILESERVICE_SERVICE
         art::Persistency_Common
         art::Persistency_Provenance
         art::Utilities
	 canvas
         ART_PERSISTENCY_COMMON
         ART_PERSISTENCY_PROVENANCE
         ART_UTILITIES
         messagefacility::MF_MessageLogger
         cetlib::cetlib
	 cetlib_except
         ROOT_BASIC_LIB_LIST
	 ROOT::Minuit
         ROOT::X3d   	 
    	 larcorealg::GeoAlgo
)

install_fhicl()
install_headers()
#install_source()
