add_subdirectory(fcl)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
art_make(BASENAME_ONLY
    LIB_LIBRARIES
      cetlib_except::cetlib_except
      cetlib::cetlib
      lardata::RecoObjects 
      lardata::Utilities
      lardataobj::RawData
      larcorealg::Geometry
      lardata::ArtDataHelper
      larcore::Geometry_Geometry_service
      messagefacility::MF_MessageLogger
      art::Persistency_Common
      art::Persistency_Provenance
      art::Utilities 
      canvas::canvas
      art::Persistency_Common
      art::Persistency_Provenance
      art::Utilities
    SERVICE_LIBRARIES
      duneana::SolarNuAna
    MODULE_LIBRARIES
      dunecore::DAQTriggerSim_TriggerDataProducts
      larcore::Geometry_Geometry_service
      lardata::RecoObjects
      lardata::Utilities
      lardata::ArtDataHelper
      lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
      larcorealg::Geometry
      lardataobj::RawData
      lardataobj::RecoBase
      dunecore::DuneObj
      larsim::MCCheater_BackTrackerService_service
      larsim::MCCheater_PhotonBackTrackerService_service
      larsim::MCCheater_ParticleInventoryService_service
      nug4::ParticleNavigation
      nusimdata::SimulationBase
      art::Framework_Core
      art::Framework_Principal
      art::Framework_Services_Registry
      art_root_io::tfile_support
      ROOT::Core
      art_root_io::TFileService_service
      art::Persistency_Common
      art::Persistency_Provenance
      art::Utilities 
      canvas::canvas
      messagefacility::MF_MessageLogger
      cetlib::cetlib 
      cetlib_except::cetlib_except
      duneana::SolarNuAna
      ROOT::Tree
)

install_headers()
install_fhicl()
install_source()
