add_subdirectory(fcl)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
art_make(BASENAME_ONLY
    LIB_LIBRARIES
      ${ROOT_CORE}
      ${ROOT_EVE}
      cetlib_except
      cetlib::cetlib
      lardata_RecoObjects 
      lardata_Utilities
      lardataobj_RawData
      larcorealg::Geometry
      larcorealg_Geometry
      lardata_ArtDataHelper
      larcore::Geometry_Geometry_service
      messagefacility::MF_MessageLogger
      art::Persistency_Common
      art::Persistency_Provenance
      art::Utilities 
      canvas
      ART_PERSISTENCY_COMMON
      ART_PERSISTENCY_PROVENANCE
      ART_UTILITIES
    SERVICE_LIBRARIES
      duneana_SolarNuAna
      ${ART_ROOT_IO_ROOTINPUT_SOURCE}
    MODULE_LIBRARIES
      dunecore::DAQTriggerSim_TriggerDataProducts
      larcore::Geometry_Geometry_service
      lardata_RecoObjects
      lardata_Utilities
      lardata_ArtDataHelper
      lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
      larcorealg::Geometry
      lardataobj::RawData
      lardataobj::RecoBase
      dunecore::DuneObj
      larsim::MCCheater_BackTrackerService_service
      larsim::MCCheater_PhotonBackTrackerService_service
      larsim::MCCheater_ParticleInventoryService_service
      nug4::ParticleNavigation
      nusimdata::SimulationBase
      ART_FRAMEWORK_CORE
      ART_FRAMEWORK_PRINCIPAL
      ART_FRAMEWORK_SERVICES_REGISTRY
      ART_ROOT_IO_TFILE_SUPPORT
      ROOT::Core
      ART_ROOT_IO_TFILESERVICE_SERVICE
      art::Persistency_Common
      art::Persistency_Provenance
      art::Utilities 
      canvas
      ART_PERSISTENCY_COMMON
      ART_PERSISTENCY_PROVENANCE
      ART_UTILITIES
      messagefacility::MF_MessageLogger
      cetlib::cetlib 
      cetlib_except
      duneana_SolarNuAna
      ROOT_BASIC_LIB_LIST
)

install_headers()
install_fhicl()
install_source()